# reference-state-last-mile-eta

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  THIRD_PARTY_DATA.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_catboost_lade_challenger.ps1  run_gated_rcot_experiment.ps1  run_lade_citybase_confirmatory.ps1  run_lade_confirmatory_diagnose.ps1  run_lade_feature_signal_audit.ps1  run_lade_raw_normalization.ps1  run_lade_raw_profile.ps1  run_lade_v2_development.ps1  run_lade_v2_final_confirmation.ps1
.github/: dependabot.yml  pull_request_template.md
configs/: gpu_full.example.yaml  gpu_smoke.yaml  lade_normalized.example.yaml  lade_raw_confirmatory.yaml  lade_raw_pilot.yaml  lade_raw_pilot_advanced_v1.yaml  lade_smoke.yaml  smoke.yaml
constraints/: ci-py311.txt
docs/: CODE_REVIEW_CHECKLIST.md  WINDOWS_RUNBOOK.md  architecture_decisions.md  data_claim_boundary.md  gpu_run.md  improvement_report.md  known_limitations.md  lade_adapter.md  leakage_threat_model.md  local-data.md  operations.md  release_qualification.md  shadow_experiment_design.md  troubleshooting.md
scripts/: __init__.py  audit_lade_feature_signal.py  benchmark_api.py  build_release_candidate_handoff.py  build_release_manifest.py  clean_build_metadata.py  clean_distribution.py  diagnose_lade_confirmatory_membership.py  generate_amazon_sample.py  generate_lade_sample.py  generate_sbom.py  normalize_lade_raw_confirmatory.py  normalize_lade_raw_pilot.py  normalize_lade_raw_v2_development.py  normalize_lade_raw_v2_final_confirmation.py  normalize_sdist.py  profile_lade_raw.py  qualify_local.ps1  qualify_local.py  qualify_local.sh  release.py  run_amazon_replay.py  run_catboost_citybase_confirmatory.py  run_catboost_lade_challenger.py  run_gated_rcot_experiment.py  run_lade_v2_development.py  run_lade_v2_final_confirmation.py  run_pipeline.py  run_release.ps1  run_spark_features.py  tasks.py  train_hsg_eta.py  verify_artifact_manifest.py  verify_base_without_torch.py  verify_locking.py  (+5 more)
(+94 files in other folders)
