[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reference-state-last-mile-eta"
dynamic = ["version"]
description = "Reference-state last-mile ETA, uncertainty, and operational triage platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Jinwoo Bae"}]
license = "MIT"
keywords = ["last-mile", "eta", "uncertainty", "reliability", "operations-research"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<4",
  "scikit-learn>=1.4,<2",
  "lightgbm>=4.3,<5",
  "joblib>=1.3,<2",
  "PyYAML>=6.0,<7",
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  "pydantic>=2.6,<3",
  "tabulate>=0.9,<1",
]

license-files = ["LICENSE"]
[project.optional-dependencies]
advanced = ["torch>=2.2,<3"]
gpu = ["torch>=2.2,<3"]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "httpx>=0.27,<1",
  "ruff>=0.5,<1",
  "build>=1.2,<2",
  "wheel>=0.43,<1",
  "packaging>=24,<26",
  "mypy>=1.10,<2",
  "types-PyYAML>=6.0,<7",
  "torch>=2.2,<3",
]
spark = ["pyspark>=3.5,<5"]

[project.scripts]
reference-eta = "reference_eta.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["reference_eta*"]

[tool.setuptools.dynamic]
version = {attr = "reference_eta.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["artifacts", "reports"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src/reference_eta"]
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
